Update PWA paths in index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#3367D6" />
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="manifest" href="/pwa/manifest.json" />
   <title>My PWA Example</title>
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/pwa/styles.css" />
 </head>
 <body>
   <main>
@@ -14,7 +14,7 @@
     <button id="installBtn" hidden>Install app</button>
   </main>
 
-  <script src="/app.js"></script>
+  <script src="/pwa/app.js"></script>
   <script>
     // Register service worker
     if ('serviceWorker' in navigator) {
