--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>My PWA</title>
 
   <!-- PWA Meta -->
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#00ff00" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
